libpomodoro = static_library(
    'pomodoro',
    'src/Interfaces/Sequencer.vala',
    'src/Interfaces/Timer.vala',
    'src/DateTimeSerializer.vala',
    'src/DefaultSequencer.vala',
    'src/DefaultTimer.vala',
    'src/Pomodoro.vala',
    'src/Service.vala',
    'src/State.vala',
    'src/TimeStatistics.vala',
    dependencies: [
        dependency('gee-0.8'),
        dependency('gio-2.0'),
        dependency('glib-2.0'),
        dependency('gobject-2.0'),
        dependency('json-glib-1.0'),
    ],
    install: true,
    include_directories: include_directories('.'),
)
