sources = files(
    'Application.vala',
    'Factory/ViewFactory.vala',
    'Interfaces/PomodoroView.vala',
    'Services/EventSound.vala',
    'View/DonePage.vala',
    'View/HeaderBar.vala',
    'View/Page.vala',
    'View/PomodoroWindow.vala',
    'View/ReportsGrid.vala',
    'View/RunningPage.vala',
    'Widgets/MultiImageToggleButton.vala',
    'Widgets/PomodoroLabel.vala',
    'Widgets/DoubleColumnContainer.vala',
    'Widgets/TimerLabel.vala',
    'Widgets/SegmentedButton.vala'
)
